modifiche applicate: - generazione dei codici utente tramite nanoid - piccole correzioni e pulizia del codice - implementata nuova funzionalità di reset password - risoluzione di piccoli bug - modificato lo schema dell'utente affinché si possa gestire il cambio della password temporanea - aggiunto il metodo GET per /api/v1/couponPrototypes/:id - aggiunta implementazione del frontend - aggiornato il file request.rest per le nuove funzionalità
