# controllers/user.controller.js
@@ -1,37 +1,17 @@
 // to do:
 // aggiungere la funzionalità nel model che faccia l'hash della password(invece di farlo nelle funzioni stesse, e.g. patchuserbyid)
 // risolvere il problema in patchuserbyid che restituisce la password in chiaro(ma salvata con hash nel db)
+
 const {User,WishlistedCoupon,Coupon,Transaction,CouponPrototype}=require("../models/bc.models");
 const {authenticateToken}=require("../scripts/tokenChecker");
 const {fetchPoints}=require("../scripts/pointsFetcher");
 const mongoose=require("mongoose");
 const bcrypt=require("bcrypt");
-require("dotenv");
+require("dotenv").config();
 
 const {transporter,senderAddress}=require("../scripts/emailSender");
 const saltRounds=parseInt(process.env.SALT_ROUNDS)||10;
 
-// da riguardare
-const changeUserPasswordByEmail=async (req,res,next)=>{     // PATCH .../api/users/users/{userEmail}/password
-    try{
-        let tpassword=Math.random().toString(36).slice(-8);
-        let user=await User.findOneAndUpdate({email:providedEmail},{password:tpassword});
-        if(user){
-            res.locals.response={status:404,success:true,message:"OK",data:user};
-            await transporter.sendMail({
-                from: senderAddress, // sender address
-                to: user.email, // list of receivers
-                subject: "Cambio password", // Subject line
-                text: "La tua nuova password temporanea è: "+createdUser.password,
-            })
-            .then(()=>console.log("Email sent"));
-        }else
-            res.locals.response={status:404,success:false,message:"Not found",data:null};
-    }catch(err){
-        console.error(err);
-        res.locals.response={status:500,success:false,message:"Internal server error",data:null};
-    }
-};
 
 const getUsers=async (req,res,next)=>{
     try{
@@ -41,7 +21,7 @@ const getUsers=async (req,res,next)=>{
             if(queryId) filters._id=queryId;
             if(queryEmail) filters.email=queryEmail;
             if(queryCode) filters.code=queryCode;                //controllo se sono definiti i filtri
-            let users=await User.find(filters);
+            let users=await User.find(filters).select("-password._id");
             users=users.map((entry)=>{
                 return {
                     self:"/api/v1/users/"+entry._id,
@@ -71,19 +51,22 @@ const postUser=async (req,res,next)=>{
         else{
             const user=await User.findOne({email:providedEmail});
             if(!user){
-                let createdUser=new User({email:providedEmail,name:providedName});
+                let createdUser=new User({email:providedEmail,name:providedName,password:{temporary:true}});
                 // console.log(createdUser.password);
+                const tpassword=createdUser.password.content;
+                console.log("---------->",tpassword);
                 await createdUser.save();
                 createdUser=createdUser.toObject();
                 createdUser.self="/api/v1/users/"+createdUser._id;
                 delete createdUser._id;
                 delete createdUser.__v;
+                delete createdUser.password._id;
                 res.locals.response={status:201,success:true,message:"New user registered",data:createdUser};
                 await transporter.sendMail({
                     from: senderAddress, // sender address
                     to: providedEmail, // list of receivers
-                    subject: "Nuova registrazione", // Subject line
-                    text: "email: "+providedEmail+"\nLa tua password temporanea: "+createdUser.password,
+                    subject: "Benvenuto in BlueCycle", // Subject line
+                    text: "Il tuo codice: "+createdUser.code+"\nLa tua password temporanea: "+tpassword,
                 })
                 .then(()=>console.log("New user created. Email sent"))
                 .catch(()=>console.log("Something went wrong"));
@@ -104,13 +87,13 @@ const getUserById=async (req,res,next)=>{
         if(!mongoose.Types.ObjectId.isValid(id))
             res.locals.response={status:400,success:false,message:"Not valid id",data:null};
         else{
-            let user=await User.findById(id).select("-__v");
+            let user=await User.findById(id).select("-__v -password._id");
             if(!user)
                 res.locals.response={status:404,success:false,message:"Not found",data:null};
             else{
                 if(await authenticateToken(req,res,["user","admin"],id)){
                     user=user.toObject();
-                    user.self="/api/v1/users"+user._id;
+                    user.self="/api/v1/users/"+user._id;
                     delete user._id;
                     res.locals.response={status:200,success:true,message:"OK",data:user};
                 }
@@ -136,12 +119,12 @@ const patchUserById=async (req,res,next)=>{
                 console.log(req.body);
                 const {oldPassword:providedOldPassword,newPassword:providedNewPassword}=req.body;
                 // console.log(providedOldPassword,providedNewPassword);
-                if((providedOldPassword && providedNewPassword)&&(bcrypt.compare(providedOldPassword,user.password))){
+                if((providedOldPassword && providedNewPassword)&&(await bcrypt.compare(providedOldPassword,user.password.content))){
                     if(await authenticateToken(req,res,["user","admin"],id)){
-                        let modifiedUser=await User.findByIdAndUpdate(id,{password:providedNewPassword}).select("-__v");
+                        let modifiedUser=await User.findByIdAndUpdate(id,{password:{content:providedNewPassword,temporary:false}}).select("-__v -password._id");
                         modifiedUser=modifiedUser.toObject();
                         modifiedUser.self="/api/v1/users/"+modifiedUser._id;
-                        modifiedUser.password=providedNewPassword;
+                        //modifiedUser.password=providedNewPassword;
                         delete modifiedUser._id;
                         res.locals.response={status:200,success:true,message:"Updated successfully",data:modifiedUser};
                     }
@@ -169,20 +152,17 @@ const getUserByIdCoupons=async (req,res,next)=>{
             else{
                 if(await authenticateToken(req,res,["user"],id)){
                     const {used:queryUsed,expired:queryExpired}=req.query;
-                    
                     let filters={};
-                    let date;
+                    let date=Math.trunc(Date.now()/1000);
+                    date-=date%86400;
                     filters.user=id;
                     if(queryUsed==="true") filters.used=true;
                     else if(queryUsed==="false") filters.used=false;
 
                     let coupons;
-                    if(queryExpired==="true"){
-                        date=Math.trunc(Date.now()/1000);
-                        date-=date%86400;
-                        console.log(date);
+                    if(queryExpired==="true")
                         coupons=await Coupon.find(filters).where("expiration").lt(date);
-                    }else if(queryExpired==="false")
+                    else if(queryExpired==="false")
                         coupons=await Coupon.find(filters).where("expiration").gt(date);
                     else
                         coupons=await Coupon.find(filters);
@@ -244,6 +224,7 @@ const postUserByIdCoupon=async (req,res,next)=>{
                             coupon.self="/api/v1/users/"+id+"/coupons/"+coupon._id;
                             coupon.user="/api/v1/users/"+id;
                             delete coupon._id;
+                            delete coupon.__v;
                             res.locals.response={status:201,success:true,message:"Added",data:coupon};
                         }catch(err){
                             console.error(err);
@@ -315,12 +296,13 @@ const postUserByIdWishlistedCoupon=async (req,res,next)=>{
                             res.locals.response={status:209,success:409,message:"Conflict",data:null};
                         else{
                             let wishlistedCoupon=new WishlistedCoupon({user:id,couponPrototype:providedCouponPrototype});
-                            wishlistedCoupon=await wishlistedCoupon.save();
+                            await wishlistedCoupon.save();
                             wishlistedCoupon=wishlistedCoupon.toObject();
                             wishlistedCoupon.self="/api/v1/users/"+id+"/wishlistedCoupons/"+wishlistedCoupon._id;
                             wishlistedCoupon.user="/api/v1/users/"+id;
                             wishlistedCoupon.couponPrototype="/api/v1/couponPrototypes/"+providedCouponPrototype;
                             delete wishlistedCoupon._id;
+                            delete wishlistedCoupon.__v;
                             res.locals.response={status:201,success:true,message:"Added",data:wishlistedCoupon};
                         }
                     }
@@ -338,18 +320,27 @@ const postUserByIdWishlistedCoupon=async (req,res,next)=>{
 const getUserByIdWishlistedCouponById=async (req,res,next)=>{
     try{
         const {userId:providedUserId,itemId:providedItemId}=req.params;
+        // console.log(providedUserId,providedItemId);
         if(!mongoose.Types.ObjectId.isValid(providedUserId)||!mongoose.Types.ObjectId.isValid(providedItemId))
             res.locals.response={status:400,success:false,message:"Not valid id/s",data:null};
         else{
             const user=await User.findById(providedUserId);
+            // console.log(user);
             if(!user)
                 res.locals.response={status:404,success:false,message:"Not found",data:null};
             if(await authenticateToken(req,res,["user"],providedUserId)){
-                const wishlistedCoupon=await WishlistedCoupon.findById(providedItemId);
+                let wishlistedCoupon=await WishlistedCoupon.findById(providedItemId).select("-__v");
+                console.log(wishlistedCoupon);
                 if(!wishlistedCoupon)
                     res.locals.response={status:404,success:false,message:"Not Found",data:null};
-                else
-                    res.locals.response={status:204,success:true,message:"OK",data:wishlistedCoupon};
+                else{
+                    wishlistedCoupon=wishlistedCoupon.toObject();
+                    wishlistedCoupon.self="/api/v1/users/"+providedUserId+"/wishlistedCoupons/"+wishlistedCoupon._id;
+                    wishlistedCoupon.user="/api/v1/users/"+providedUserId;
+                    wishlistedCoupon.couponPrototype="/api/v1/couponPrototypes/"+wishlistedCoupon.couponPrototype;
+                    delete wishlistedCoupon._id;
+                    res.locals.response={status:200,success:true,message:"OK",data:wishlistedCoupon};
+                }
             }
         }
     }catch(err){
@@ -375,7 +366,7 @@ const deleteUserByIdWishlistedCouponById=async (req,res,next)=>{
                 if(!wishlistedCoupon)
                     res.locals.response={status:404,success:false,message:"Not Found",data:null};
                 else
-                    res.locals.response={status:204,success:true,message:"Deleted",data:null};
+                    res.locals.response={status:200,success:true,message:"Deleted",data:null};
             }
         }
     }catch(err){
