# models/user.model.js
@@ -1,14 +1,35 @@
 //to do:
-//aggiungere l'hash della password con bcrypt
 //aggiungere la validazione dell'indirizzo email
 // aggiungere un controllo in pre(findOneAndUpdate) se la password è stata cambiata
 
 const {Schema,model}=require("mongoose");
+// const {customAlphabet}=require("nanoid");
+
+// dynamic import per nanoid
+let customAlphabet;
+(async()=>{
+    const nanoidModule=await import("nanoid");
+    customAlphabet=nanoidModule.customAlphabet;
+})();
+
+const alphabet="0123456789";
+const fixedLength=10; // all codes have fixed length
+
 const bcrypt=require("bcrypt");
 require("dotenv").config();
-
-const fixedLength=10; // all codes have fixed length
 const saltRounds=parseInt(process.env.SALT_ROUNDS)||10;
+
+const passwordSchema=new Schema({
+    content: {
+        type: String,
+        required: true,
+        default:()=>Math.random().toString(36).slice(-10), // senza la funzione freccia, ad ogni utente viene assegnata la stessa password
+        trim:true
+    },
+    temporary: {
+        type: Boolean
+    }
+});
 
 const userSchema=Schema(
     {
@@ -16,7 +37,8 @@ const userSchema=Schema(
             type: String,
             unique: true,
             required: true,
-            default:codeGenerator(fixedLength)
+            // default:codeGenerator(fixedLength)
+            default:()=>customAlphabet(alphabet,fixedLength)()
         },
         email:{
             type: String,
@@ -30,10 +52,9 @@ const userSchema=Schema(
             trim:true
         },
         password:{
-            type: String,
+            type: passwordSchema,
+            // type: String,
             required:true,
-            trim:true,
-            default:()=>Math.random().toString(36).slice(-10) // senza la funzione freccia, ad ogni utente viene assegnata la stessa password
         },
         points:{
             type: Number,
@@ -46,17 +67,26 @@ const userSchema=Schema(
 
 // middleware to ensure that no other user has the same code(!!! naive !!!) <-- i don't like it
 userSchema.pre("save",async function(next){
-    // if(this.isModified("password"))
-        await bcrypt.hash(this.password,saltRounds).then((hashedpassword)=>this.password=hashedpassword);
+    try{
+        // if(this.isModified("password"))
+        await bcrypt.hash(this.password.content,saltRounds).then((hashedpassword)=>this.password.content=hashedpassword);
+        this.password.temporary=true
+        // rimuovere quello che c'è qui sotto
 
-    // the new user hasn't been created yet
-    while(await User.findOne({code:this.code})){
-        // generate a new code
-        this.code=codeGenerator(fixedLength); 
+        // the new user hasn't been created yet
+        while(await User.findOne({code:this.code})){
+            // generate a new code
+            // this.code=codeGenerator(fixedLength); 
+            this.code=customAlphabet(alphabet,fixedLength)();
+        }
+        next();
+    }catch(err){
+        throw err;
     }
-    next();
 });
 
+
+// middleware to hash the password when changed
 userSchema.pre("findOneAndUpdate",async function(next){
     // controllo
     //     await bcrypt.hash(this.password,saltRounds).then((hashedpassword)=>this.password=hashedpassword);
@@ -65,7 +95,7 @@ userSchema.pre("findOneAndUpdate",async function(next){
         const updatedObj=this.getUpdate(); // ottieniene l'oggetto di aggiornamento
         // console.log(updatedObj);
         if(updatedObj.password)
-            await bcrypt.hash(updatedObj.password,saltRounds).then((hashedpassword)=>updatedObj.password=hashedpassword);
+            await bcrypt.hash(updatedObj.password.content,saltRounds).then((hashedpassword)=>updatedObj.password.content=hashedpassword);
         // if(updatedObj.$set && updatedObj.$set.password){
         //     const hashedPassword=await bcrypt.hash(updatedObj.$set.password,saltRounds);
         //     this.set({password:hashedPassword});
